Clothing Drive update
Added clothing drive event, added Shapiro bio, added ditocco bio, added
scrolling of entries with overflow, removed white from logo, and deleted
unneccesary code

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 	padding-bottom:75px;
 	width: 100%;
 	height:50px;
-	background-color:rgba(50,50,50,.75);
+	background-color:rgba(230,230,230,.8);
 	border-bottom: 2px solid black;
 	position:fixed;
 	top:0;
@@ -27,47 +27,11 @@ body{
 	text-align: center;
 }
 .pageLink{
-	font-size: 165%;
+	font-size: 28px;
 	margin-left: 5%;
 	margin-right: 5%;
-	color: rgb(0,100,255);
+	color: rgb(0,33,166);
 	text-decoration: underline;
-}
-.pageLink:link {
-}
-/* visited link */
-.pageLink:visited {
-}
-/* mouse over link */
-.pageLink:hover {
-    text-decoration: underline;
-}
-/*
-#aboutLink:hover {
-	font-size: 155%;
-}
-#portLink:hover {
-	font-size: 155%;
-}
-#resLink:hover {
-	font-size: 155%;
-}
-*/
-/* selected link */
-.pageLink:active {
-    color: blue;
-}
-#gitLink{
-	font-weight: bold;
-	color:blue;
-	margin-left: 48%;
-}
-#gitLink:link{
-	text-decoration: none;
-}
-#gitLink:hover{
-	color: #FFFF2E;
-    text-decoration: underline;
 }
 .body{
 	margin-top: 100px;
@@ -76,6 +40,7 @@ body{
 	margin-right:15%;
 	position:relative;
 	font-size:18px;
+
 }
 .iconImg{
 	position:absolute;
@@ -85,35 +50,14 @@ body{
 	height:150px;
 	width:200px;
 }
-#aboutMeBackground{
-	bottom: 0;
-	overflow: auto;
-	background-image:url("images/7.jpg");
-}
 .container{
 	position:absolute;
 	top:0;
 	bottom: 0;
 	overflow: auto;
 	height: 100%;
-	background-image:url("images/background4.jpg");
-}
-#containerNew{
 	background-image:url(images/UF.png);
 	background-size: 100% 100%;
-}
-#me{
-	padding-top:5%;
-	padding-left:25%;
-}
-#picture{
-	margin:auto;
-	background-image:url('images/MePool2.jpg');
-	width:80%;
-	height:90%;
-	background-size:100% 100%;
-	margin-top: 50px;
-	border-bottom: 2px solid black
 }
 #aboutandcontact{
 	font-size: 120%;
@@ -122,96 +66,25 @@ body{
 	padding-left: 17%;
 	padding-right:15%;
 }
-#eventsandmembers{
-	font-size: 120%;
+.eventsandmembers{
+	font-size: 22px;
 	font-weight: bold;
-	padding-top:2%;
-	padding-left: 30%;
-	padding-right:15%;
-}
-#resume{
-	padding-top:5%;
-	padding-bottom:5%;
-}
-#resumeBody{
-	text-align: center;
-}
-.folioHeader{
-	font-family: 'Abril Fatface', cursive;
-	font-family: 'Fontdiner Swanky', cursive;
-	font-size: 400%;
-}
-.headerBreak { 
-  margin-top: -15px;
-  border : 0;
-  height: 3px; 
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); 
-} 
-
-.subHeaderBreak{
-  margin-top: -60px;
-  margin-bottom: 5%;
-  width: 50%;
-  float: left;
-  border: 0;
-  border-top: 2px solid #8c8c8c;
-  border-bottom: 2px solid #8c8c8c;;
-  box-shadow: 0 0 10px 1px black;
-}
-.folioPiece{
-	text-align: center;
-	font-weight: bold;
-	border-bottom:1px solid black;
-	font-size: 120%;
-	padding:2%;
-	padding-bottom:5%;
-	padding-top:5%;
-}
-.subFolioCategory{
-	text-align: left;
-	font-family: 'Pacifico', cursive;
-	margin-left: 1%;
-	margin-top: 0;
-	font-size: 225%;
-	color:rgb(10,10,35);
-	font-weight: bold;
-}
-.codeUsed{
-	color:rgb(10,10,55);
-
-}
-#tdPic{
-	margin-right: 2%;
-
-}
-#description{
-	width: 30%;
-	position:relative;
-	float:right;
-}
-.caPic{
-	margin-left: 3%;
-	border:2px solid black;
-}
-
-#description2{
-	padding-left:5%;
-	width: 45%;
-	position:relative;
+	padding-left: 5%;
 	display: inline-block;
+	width:55%;
 }
-#art{
+.newEntry{
+	padding:3%;
+	padding-top: 5%;
+	border-bottom: 2px solid black;
+}
+.photo{
+	width:80%;
+	height:50%;
+}
+.photoDiv{
 	display:inline-block;
-	margin-left: 75%;
-	margin-top:-35%;
-}
-.codeLink{
-	color: blue;
-}
-.linkedIn{
-	width:60px;
-	height:60px;
-	padding-left: 2%;
-	text-align: center;
-	margin-bottom: 1%;
+	width:35%;
+	float:left;
+	text-align:center;
 }
